--- a/eas.json
+++ b/eas.json
@@ -11,6 +11,9 @@
       }
     },
     "preview": {
+      "android": {
+        "buildType": "apk"
+      },
       "distribution": "internal",
       "ios": {
         "resourceClass": "m-medium"
